--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express": "5.1.0"
   },
   "devDependencies": {
-    "@types/express": "^5.0.1",
+    "@types/express": "5.0.1",
+    "console-clear": "1.1.1",
     "ts-node-dev": "2.0.0",
     "typescript": "5.8.3"
   }
