--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "5.1.0"
   },
   "devDependencies": {
+    "@types/console-clear": "1.1.4",
     "@types/express": "5.0.1",
     "console-clear": "1.1.1",
     "ts-node-dev": "2.0.0",
