--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "ProgramacionII",
   "main": "index.js",
   "scripts": {
-    "tsc": "tsc",
+    "build": "tsc",
+    "start": "node app.js",
     "dev": "ts-node-dev app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
