quitando cosas del package.json

--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "un-gran-paso-para-xavi",
   "version": "1.0.0",
   "description": "ProgramacionII",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "build": "tsc",
     "start": "node app.js",
-    "dev": "ts-node-dev app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev app.ts"
   },
   "repository": {
     "type": "git",
