--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "@types/express": "5.0.1",
     "console-clear": "1.1.1",
     "express": "5.1.0",
+    "standard": "17.1.2",
     "ts-node-dev": "2.0.0",
     "typescript": "5.8.3"
+  },
+  "eslintConfig": {
+    "extends": "standard"
   }
 }
