--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "body-parser": "2.2.0",
     "ejs": "3.1.10",
     "express": "5.1.0",
-    "express-validator": "^7.2.1",
+    "express-validator": "7.2.1",
+    "node-fetch": "^3.3.2",
     "sqlite": "5.1.1",
     "sqlite3": "5.1.7"
   },
