--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "homepage": "https://github.com/Xavix404/Un-gran-paso-para-xavi#readme",
   "dependencies": {
     "body-parser": "2.2.0",
+    "dotenv": "^16.5.0",
     "ejs": "3.1.10",
     "express": "5.1.0",
     "express-validator": "7.2.1",
-    "node-fetch": "^3.3.2",
+    "node-fetch": "3.3.2",
+    "nodemailer": "^7.0.3",
     "sqlite": "5.1.1",
     "sqlite3": "5.1.7"
   },
@@ -32,6 +34,7 @@
     "@types/better-sqlite3": "7.6.13",
     "@types/console-clear": "1.1.4",
     "@types/express": "5.0.1",
+    "@types/nodemailer": "^6.4.17",
     "console-clear": "1.1.1",
     "ts-node-dev": "2.0.0",
     "typescript": "5.8.3"
