--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.5.0",
     "ejs": "3.1.10",
     "express": "5.1.0",
+    "express-session": "^1.18.1",
     "express-validator": "7.2.1",
     "node-fetch": "3.3.2",
     "nodemailer": "^7.0.3",
@@ -34,6 +35,7 @@
     "@types/better-sqlite3": "7.6.13",
     "@types/console-clear": "1.1.4",
     "@types/express": "5.0.1",
+    "@types/express-session": "^1.18.1",
     "@types/nodemailer": "^6.4.17",
     "console-clear": "1.1.1",
     "ts-node-dev": "2.0.0",
