--- a/package.json
+++ b/package.json
@@ -20,23 +20,29 @@
   },
   "homepage": "https://github.com/Xavix404/Un-gran-paso-para-xavi#readme",
   "dependencies": {
+    "bcrypt": "6.0.0",
     "body-parser": "2.2.0",
-    "dotenv": "^16.5.0",
+    "dotenv": "16.5.0",
     "ejs": "3.1.10",
-    "express": "5.1.0",
+    "express": "4.21.2",
     "express-session": "^1.18.1",
     "express-validator": "7.2.1",
     "node-fetch": "3.3.2",
-    "nodemailer": "^7.0.3",
+    "nodemailer": "7.0.3",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "sqlite": "5.1.1",
     "sqlite3": "5.1.7"
   },
   "devDependencies": {
+    "@types/bcrypt": "5.0.2",
     "@types/better-sqlite3": "7.6.13",
     "@types/console-clear": "1.1.4",
-    "@types/express": "5.0.1",
-    "@types/express-session": "^1.18.1",
-    "@types/nodemailer": "^6.4.17",
+    "@types/express": "5.0.3",
+    "@types/express-session": "1.18.1",
+    "@types/nodemailer": "6.4.17",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.16",
     "console-clear": "1.1.1",
     "ts-node-dev": "2.0.0",
     "typescript": "5.8.3"
