--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,18 @@
 {
   "compilerOptions": {
     "target": "esnext",
-    "outDir": "./",
     "module": "commonjs",
+    "outDir": "./dist",
+    "rootDir": "./",
     "strict": true,
     "esModuleInterop": true,
-    "typeRoots": [
-      "./node_modules/@types",
-      "./src/types"
-    ],
-
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "incremental": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true
+    "skipLibCheck": true
   },
   "include": [
-    "*.ts",
-    "**/**/*.ts",
-    "**/**/**/*.ts", "app.ts", "routes/router.ts",
+    "**/*.ts"
   ],
   "exclude": [
     "node_modules",
-    "build",
-    ".next"
+    "dist"
   ]
 }
