--- a/package.json
+++ b/package.json
@@ -35,16 +35,16 @@
     "sqlite3": "5.1.7"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcrypt": "5.0.2",
     "@types/better-sqlite3": "7.6.13",
-    "@types/body-parser": "^1.19.6",
+    "@types/body-parser": "1.19.6",
     "@types/console-clear": "1.1.4",
-    "@types/express": "^5.0.3",
-    "@types/express-session": "^1.18.1",
-    "@types/node": "^24.0.1",
-    "@types/nodemailer": "^6.4.17",
-    "@types/passport": "^1.0.17",
-    "@types/passport-google-oauth20": "^2.0.16",
+    "@types/express": "5.0.3",
+    "@types/express-session": "1.18.1",
+    "@types/node": "24.0.1",
+    "@types/nodemailer": "6.4.17",
+    "@types/passport": "1.0.17",
+    "@types/passport-google-oauth20": "2.0.16",
     "console-clear": "1.1.1",
     "ts-node-dev": "2.0.0",
     "typescript": "5.8.3"
